--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+html, body
+  width: 100%
+  height: 100%
+  overflow: hidden
+
+body
+  background: url(assets/imgs/portfolio-bg-1.png) top left no-repeat, url(assets/imgs/portfolio-bg-2.png) center left no-repeat
+  background-size: contain, 20%
+  background-color: #eeeeee
+
+app-portfolio-content
+  width: 100vw
