--- a/src/app/portfolio-content/portfolio-content.component.html
+++ b/src/app/portfolio-content/portfolio-content.component.html
@@ -1,8 +1,28 @@
-<div class="content">
-  <section class="profile">
-    Aqui va el perfil
+<div id="content">
+  <section id="curriculum">
+    <div class="photo">
+      <img src="assets/imgs/portfolio-photo.png" alt="">
+      <p>&#62;Hoja de vida&#60;</p>
+    </div>
+    <div class="info">
+      <h1 class="no-margin">
+        Verónica
+      </h1>
+      <h2 class="no-margin">Valencia Echavarria</h2>
+      <strong>Profesional en estudios literarios</strong>
+      <br>
+      Egresada no graduada
+      <h3>Perfil</h3> 
+      <p class="profile">
+        Escribir como una necesidad, escribir como la mejor forma de vivir y compartir el hecho teatral y cultural, la literatura, la calle y los viajes.
+      </p>
+      <h3>Contacto</h3>
+      <p class="contact">
+        veronica.valencia@upb.edu.co&nbsp;&nbsp;&nbsp;318 614 9831
+      </p>
+    </div>
   </section>
-  <section class="work">
+  <section id="work">
     Cuerpo
   </section>
   <footer>
