--- a/src/app/portfolio-content/portfolio-content.component.sass
+++ b/src/app/portfolio-content/portfolio-content.component.sass
@@ -1,4 +1,21 @@
-.content
+#content
   display: flex
   flex-direction: column
+  width: 100vw
+  height: 100vh
+  overflow-x: hidden
+
+#curriculum
+  display: flex
+  flex-wrap: wrap
+  padding: 3% 0
+  .photo
+    display: flex
+    flex-basis: 400px
+    flex-direction: column
+    align-items: center
+    img
+      height: 90%
+  .info
+    flex-basis: 500px
 
