--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,12 +1,9 @@
-html, body
-  width: 100%
-  height: 100%
-  overflow: hidden
+\:root
+  --light: #eeeeee
+  --dark: #845f74
 
 body
-  background: url(assets/imgs/portfolio-bg-1.png) top left no-repeat, url(assets/imgs/portfolio-bg-2.png) center left no-repeat
-  background-size: contain, 20%
-  background-color: #eeeeee
+  background-color: var(--light)
 
-app-portfolio-content
-  width: 100vw
+.no-margin
+  margin: 0
