Se agregan dos flujos, para movil y para escritorio

--- a/src/app/portfolio-content/portfolio-content.component.html
+++ b/src/app/portfolio-content/portfolio-content.component.html
@@ -1,10 +1,12 @@
 <div id="content">
-  <section id="curriculum">
-    <div class="photo">
+  <img class="decoration top" src="assets/imgs/portfolio-bg-1.png" alt="">
+  <img class="decoration bottom" src="assets/imgs/portfolio-bg-2.png" alt="">
+  <div class="grid">
+    <section class="photo">
       <img src="assets/imgs/portfolio-photo.png" alt="">
       <p>&#62;Hoja de vida&#60;</p>
-    </div>
-    <div class="info">
+    </section>
+    <section class="info">
       <h1 class="no-margin">
         Verónica
       </h1>
@@ -12,21 +14,37 @@
       <strong>Profesional en estudios literarios</strong>
       <br>
       Egresada no graduada
-      <h3>Perfil</h3> 
+      <h3>Perfil</h3>
       <p class="profile">
-        Escribir como una necesidad, escribir como la mejor forma de vivir y compartir el hecho teatral y cultural, la literatura, la calle y los viajes.
+        Escribir como una necesidad, escribir como la mejor forma de vivir y compartir el hecho teatral y cultural, la
+        literatura, la calle y los viajes.
       </p>
       <h3>Contacto</h3>
       <p class="contact">
         veronica.valencia@upb.edu.co&nbsp;&nbsp;&nbsp;318 614 9831
       </p>
-    </div>
-  </section>
-  <section id="work">
-    Cuerpo
-  </section>
-  <footer>
-    Pie de pagina
-  </footer>
+    </section>
+    <section class="work">
+      <h3>Publicaciones</h3>
+      <div class="chairs">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+        <img class="chair" src="assets/imgs/portfolio-chair.png" alt="">
+      </div>
+    </section>
+    <footer>
+      "Lorem ipsum dolor sit amet consectetur adipiscing elit"
+    </footer>
+  </div>
 </div>
-
