--- a/src/app/portfolio-content/portfolio-content.component.sass
+++ b/src/app/portfolio-content/portfolio-content.component.sass
@@ -4,7 +4,6 @@
   overflow-y: auto
   .decoration
     position: absolute
-    z-index: -1
     &.top
       top: 0
       left: 0
@@ -42,17 +41,19 @@
   justify-content: space-around
   align-items: center
   .container
+    transition: all 500ms
     position: relative
     .chair
       width: 70px
     .float
+      font-family: 'museo_slab300'
       background-image: url("/assets/imgs/float.png")
       background-size: 100% 100%
       background-repeat: no-repeat
-      padding: 10% 10% 25% 15%
+      padding: 12px 30px 35px 12px
       position: absolute
       width: 200%
-      top: -60%
+      bottom: 100%
       left: -40%
     
 
