--- a/src/app/portfolio-content/portfolio-content.component.html
+++ b/src/app/portfolio-content/portfolio-content.component.html
@@ -2,6 +2,8 @@
   <img class="decoration top" src="assets/imgs/portfolio-bg-1.png" alt="">
   <img class="decoration bottom" src="assets/imgs/portfolio-bg-2.png" alt="">
   <div class="grid">
+    <div class="pl"></div>
+    <div class="margin"></div>
     <section class="photo">
       <img src="assets/imgs/portfolio-photo.png" alt="">
       <p class="font-museoSans900 font-dot8 color-dark">&#62;Hoja de vida&#60;</p>
