--- a/src/app/portfolio-content/portfolio-content.component.sass
+++ b/src/app/portfolio-content/portfolio-content.component.sass
@@ -17,7 +17,7 @@
   display: grid
   height: 100vh
   grid-template-columns: 1fr 1fr 1fr 3fr 1fr 1fr
-  grid-template-rows: 1fr 5fr 5fr 1fr
+  grid-template-rows: 1fr 4fr 5fr 1fr
   grid-template-areas: "pl margin margin margin margin pr" "pl picture picture profile . pr" "pl . work work . pr" "pl . footer footer . pr"
 
 .photo
@@ -47,7 +47,7 @@
       width: 70px
     .float
       font-family: 'museo_slab300'
-      background-image: url("/assets/imgs/float.png")
+      background-image: url("../../assets/imgs/float.png")
       background-size: 100% 100%
       background-repeat: no-repeat
       padding: 12px 30px 35px 12px
@@ -64,6 +64,11 @@ footer
   
   .author
     float: right
+
+@media (max-width: 1024px)
+
+  .grid
+    height: auto
 
 @media (max-width: 768px)
 
