--- a/src/app/portfolio-content/portfolio-content.component.html
+++ b/src/app/portfolio-content/portfolio-content.component.html
@@ -6,7 +6,7 @@
     <div class="margin"></div>
     <section class="photo">
       <img src="assets/imgs/portfolio-photo.png" alt="">
-      <p class="font-museoSans900 font-dot8 color-dark">&#62;Hoja de vida&#60;</p>
+      <a class="font-museoSans900 font-dot8 color-dark" target="_blank" href="https://veroval.000webhostapp.com/vvcurriculum.pdf">&#62;Hoja de vida&#60;</a>
     </section>
     <section class="info">
       <h1 class="no-margin font-museo900 color-dark font-2">
@@ -15,8 +15,6 @@
       <h2 class="no-margin font-museo900 color-dark">Valencia Echavarria</h2>
       <strong class="font-museoSans500 font-dot8">Profesional en estudios literarios</strong>
       <br>
-      <span class="no-margin font-dot8">Egresada no graduada</span>
-      <br>
       <br>
       <h3 class="no-margin font-vinchand font-1dot5">Perfil</h3>
       <p class="no-margin profile">
@@ -24,9 +22,9 @@
         literatura, la calle y los viajes.
       </p>
       <h3 class="no-margin font-vinchand font-1dot5">Contácto</h3>
-      <p class="no-margin contact">
-        veronica.valencia@upb.edu.co&nbsp;&nbsp;&nbsp;318 614 9831
-      </p>
+      <div class="no-margin contact">
+        <a class="email" href="mailto:veronica.valencia@upb.edu.co">veronica.valencia@upb.edu.co</a><div>318 614 9831</div>
+      </div>
     </section>
     <section class="work">
       <h3 class="no-margin font-vinchand font-1dot5">Publicaciones</h3>
