--- a/src/app/portfolio-content/portfolio-content.component.sass
+++ b/src/app/portfolio-content/portfolio-content.component.sass
@@ -26,7 +26,16 @@
   flex-direction: column
   align-items: center
   img
-    width: 90%
+    width: 75%
+  a
+    z-index: 2
+
+.contact
+  display: flex
+  flex-wrap: wrap
+  .email
+    flex-basis: 250px
+    z-index: 2
 
 .info
   grid-area: profile
@@ -56,6 +65,7 @@
       width: 200%
       bottom: 100%
       left: -40%
+      z-index: 3
     
 
 footer
@@ -66,17 +76,16 @@ footer
   .author
     float: right
 
-@media (max-width: 1024px)
-
-  .grid
-    height: auto
-
 @media (max-width: 768px)
 
   .grid
     display: flex
     flex-direction: column
-    padding: 8% 8% 0 8%
+    padding: 8% 8% 8% 8%
     height: auto
     overflow-y: auto
 
+@media (min-width: 768px)
+
+  .grid
+    grid-template-rows: 1fr 4fr 5fr 1fr
